# graph-partition

./: .gitignore  README.rst  example.py  pyproject.toml
graph_partition/: __init__.py  cli.py  experiment.py  main.py
graph_partition/algorithms/: __init__.py  approx1.py  approx2.py  approx3.py  approx4.py  approx5.py  approx6.py  approx7.py  approx8.py  check_instance.py
graph_partition/classes/: graph.py  instanceManager.py
graph_partition/test-instances/: custom.in  unicamp_624_901.in
tests/: test_graph_partition.py
