[tool.poetry]
name = "graph-partition"
version = "2021.8.25"
description = "vertex-weighted graph partitioning"
authors = ["Curtis Kennedy <ckennedy@ualberta.ca>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/curtiskennedy/graph-partition"

[tool.poetry.dependencies]
python = "^3.8"
PyInquirer = "^1.0.3"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
snakeviz = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
partition = "graph_partition.main:cli"